<resources>
    <string name="app_name">KSHSharing</string>
    <string name="edit_message">Enter image id</string>
    <string name="tag_message">Enter tag</string>
    <string name="button_send">Send</string>
    <string name="button_get">Get</string>
    <string name="button_select">Take photo</string>
    <string name="button_select2">Pick photo</string>
    <string name="button_selection">Upload image</string>
    <string name="button_getimage">Download image</string>
    <string name="button_search">Search by tag</string>
    <string name="button_user">View user info</string>
    <string name="image_name">Enter image name</string>
    <string name="image_tags">Enter image tags</string>
    <string name="url_upload">https://group28hbv501g2016.herokuapp.com/uploadr/</string>
    <string name="url_db">https://group28hbv501g2016.herokuapp.com/imgr/</string>
    <string name="url_search">https://group28hbv501g2016.herokuapp.com/searchr/</string>
    <string name="url_downloadImg">http://group28hbv501g2016.s3-website-eu-west-1.amazonaws.com/images/</string>
    <string name="title_activity_display">Image</string>
    <string name="title_activity_selection">Upload</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_get">Download</string>
    <string name="title_activity_profile">User profile</string>
    <string name="display_name">Name: %1$s</string>
    <string name="display_tags">Tags: %1$s</string>
    <string name="profile_user_id">UserID: %1$s</string>
    <string name="profile_user_name">Name: %1$s</string>
    <string name="profile_user_friends">Friends:</string>
    <string name="profile_user_uploads">Uploads:</string>
</resources>
